--- a/languages/ml/ocaml/tools/utop.org
+++ b/languages/ml/ocaml/tools/utop.org
@@ -1,10 +1,11 @@
-- #use "FILE.ML";;
-- #show FN;;
-- #trace FN;;
-- #require "module_name";;
-- larger default prints
-  https://www.reddit.com/r/ocaml/comments/72nlch/utop_disable_truncation/
-  #print_lengh N;;
-  #print_depth N;,
+|------------------------+----------------------------|
+| #use "FILE.ML"         |                            |
+| #show FN               |                            |
+| #trace FN              | prints calls of a function |
+| #require "module_name" |                            |
+| #print_length N        |                            |
+| #print_depth N         |                            |
+|------------------------+----------------------------|
+- #use is not a good practice to do it repeatedly on the same file
 - <> tells us is an unprintable value
 - when writting a *let*, a *let in* is implied
